@@ -1,7 +1,10 @@
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
-	* lib/ws2_32/misc/bsd.c: Add @implemented and @unimplemented
-	to APIs.
+	* lib/wsock32/stubs.c: Add @implemented and @unimplemented to APIs.
+
+2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* lib/ws2_32/misc/bsd.c: Add @implemented and @unimplemented to APIs.
 	* lib/ws2_32/misc/dllmain.c: Ditto.
 	* lib/ws2_32/misc/event.c: Ditto.
 	* lib/ws2_32/misc/ns.c: Ditto.
